# BBLog

./: .gitignore  BBLog.hpp  BB_Loger.hpp  CMakeLists.txt  README.md  compile_commands.json
test/: CMakeLists.txt  cpp17_target_test.cpp  cpp17_test.cpp  cpp20_target_test.cpp  cpp20_test.cpp
